--- a/src/Styles/mediaQueries/_Medium.scss
+++ b/src/Styles/mediaQueries/_Medium.scss
@@ -23,7 +23,7 @@
         font-size: 3rem !important;
     top: 60% !important;
     }
-   button{
+   button.Partner-Us{
        width: 14rem !important;
        height: 6rem !important;
        svg{
