--- a/src/Styles/_Contact.scss
+++ b/src/Styles/_Contact.scss
@@ -4,12 +4,15 @@ main.Contact{
     width: 100%;
 
     #map{
-        img{
-        object-fit: scale-down;
-        object-position: center;
-        height: 100%;
-      margin-right: 1rem;
-        }
+      //   img{
+      //   object-fit: scale-down;
+      //   object-position: center;
+      //   height: 100%;
+      // margin-right: 1rem;
+      //   }
+      width: 100%;
+      height: 400px;
+      
     }
 
     div.socialmediaPane{
